@@ -1,3 +1,12 @@
+2001-08-28  Kevin Vandersloot <kfv101@psu.edu>
+
+	* load-graph.c: add line divisions to the graph. Make the data
+	lines wider (3 pixels - maybe too large).
+
+	* proctable.c: add hack to see if process is graphical. Check
+	the memory maps to see if it links to libX11. #ifdefed out
+	right now - not sure if it is too useful
+
 2001-08-27  Kevin Vandersloot <kfv101@psu.edu>
 
 	* infoview.c, callbacks.c, load-graph.c: mark the memory size
